Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
Qt Creator 5.0.2
-
None
-
Windows10
-
-
a8d5929be3a6d5fa7cbb307ee86264f31784ae73 (qt-creator/qt-creator/6.0)
Description
I can't use relative path in build directory. I don't know if this is a bug or designed like this.But at least the cursor works strangely
- I tap backspace to clear build directory,
- When I want to delete the last letter, the build directory completes my path and adds the drive letter'D '
- I finally clear build directory
- When I enter the first letter 'b' of "build" in the empty path, the build directory automatically fills in the absolute path and moves the cursor after the first letter
Attachments
For Gerrit Dashboard: QTCREATORBUG-26408 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
378895,1 | PE: Fix jumping cursor when fixing build directory | 6.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
379027,3 | Utils: Do not update pathchooser value from displayed string | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |