Utils: Do not update pathchooser value from displayed string

The displayed string may differ from its "real" resulting path
depending on having a base directory or not.

Fixes: QTCREATORBUG-26408
Change-Id: Ic569671899329249559a2bfb3ecd30190f166dba
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>